--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,15 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.product-container{
+  display: flex;
+  flex-wrap: wrap;
+}
+.product-item{
+border: 1px solid #ccc;
+padding: 20px;
+  margin: 20px;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
